--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,3 +1,7 @@
+*:focus {
+    outline: none;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -8,6 +12,7 @@ body {
     width: 100vw;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
