✨ implement cheat mode

--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -3,4 +3,14 @@
     width: 85%;
     grid-template-columns: repeat(9, 1fr);
     grid-gap: 2rem;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none;
+}
+
+.board--cheat-mode .card__front {
+    color: #cf962b;
 }
